# gr-adaptative-filtering

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: adaptative_filteringConfig.cmake
docs/: README.adaptative_filtering
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  adaptative_filtering_lms-filter.xml  adaptative_filtering_lms_filter_ff.xml
include/adaptative_filtering/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_adaptative_filtering.cc  qa_adaptative_filtering.h  test_adaptative_filtering.cc
python/: CMakeLists.txt  __init__.py  lms-filter.py  lms-filter_ff.py  lms_filter_ff.py  qa_lms-filter.py  qa_lms-filter_ff.py  qa_lms_filter_ff.py
swig/: CMakeLists.txt  adaptative_filtering_swig.i
